test/Fail/Issue644.err
Issue644.agda:28.13-14: error: [UnequalTerms]
R !=< ((x : A) → R.P r x)
when checking that the expression r has type (x : A) → R.P r x
